--- a/django-unicorn/webscraping/templates/unicorn/webscrape/webscrape.html
+++ b/django-unicorn/webscraping/templates/unicorn/webscrape/webscrape.html
@@ -4,36 +4,183 @@
 {% load define_action %}
 
 <div unicorn:view>
-    {% unicorn 'webscrape.manage' parent=self %}
 
-    <ul class="messages messages mt-20 block bg-slate-600 p-4 rounded text-green-100 text-center hidden">
-        {% if messages %}
-                {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-        {% else %}
-            &nbsp;
-        {% endif %}
-    </ul>
+    <!-- div class="grid grid-cols-2 gap-4" -->
 
-    <table class="table table-auto rounded border-green-300">
-        <thead class="p-4 text-gray">
-            <tr>
-                <td class="min-w-32">
+        <div class="col-left">
+
+            <h2 class="mt-5 mb-4 bg-green-800 text-3xl text-green-100 text-center p-2">
+                Find a person
+            </h2>
+            {% unicorn 'webscrape.manage' parent=self %}
+
+
+            <h2 class="mt-8 mb-4 bg-green-800 text-3xl text-green-100 text-center p-2">
+                Reverse find a person
+            </h2>
+            {% unicorn 'webscrape.manage_reverse' parent=self %}
+
+
+            <h2 class="mt-8 mb-4 bg-green-800 text-3xl text-green-100 text-center p-2">
+                Find people
+            </h2>
+            {% unicorn 'webscrape.manage_people' parent=self %}
+
+
+            <ul class="messages messages mt-20 block bg-slate-600 p-4 rounded text-green-100 text-center hidden">
+                {% if messages %}
+                        {% for message in messages %}
+                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                        {% endfor %}
+                {% else %}
                     &nbsp;
-                </td>
-                {% for field in table_fields %}
-                    <td class="bg-green-600 first:rounded-l-lg last:rounded-r-lg p-2
-							   text-green-100 tracking-widest border-green-100">
-                        {{ field|title }}
-                    </td>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody id="webscrape-body">
-            {% for webscrape in webscrapes %}
-                {% unicorn 'webscrape.row' webscrape=webscrape key=webscrape.id parent=self %}
-            {% endfor %}
-        </tbody>
-    </table>
+                {% endif %}
+            </ul>
+          
+        </div>
+
+
+        <div class="col-right">
+            <table class="table table-auto rounded border-green-300">
+                <thead class="p-4 text-gray">
+                    <tr>
+                        <td class="min-w-32">
+                            &nbsp;
+                        </td>
+                        {% for field in table_fields %}
+                            <td class="bg-green-600 first:rounded-l-lg last:rounded-r-lg p-2
+                                       text-green-100 tracking-widest border-green-100">
+                                {{ field|title }}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                </thead>
+                <tbody id="webscrape-body">
+                    {% for webscrape in webscrapes %}
+                        {% unicorn 'webscrape.row' webscrape=webscrape key=webscrape.id parent=self %}
+                    {% endfor %}
+                </tbody>
+            </table>
+              
+        </div>
+
+
+        <style>
+            .col-left {
+                float: left;
+                width: 50%;
+                min-width: 300px;
+            }
+            .col-right {
+                float: right;
+                width: 60%;
+                min-width: 600px !important;                
+            }
+
+            @media screen and (min-width: 800px) {
+                .col-right {
+                    position: fixed !important;
+                    top: 190px;
+                    left: 800px;
+                    width: 10%;
+                }
+            }
+
+            td.progressBarCell {
+                padding-left: .75rem;
+                padding-bottom: 1.4em;
+                font-size: .9em;
+            }
+
+            .taskOutput{
+                text-align: center;                
+            }
+
+            .overlay {
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5); 
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .overlay-content {
+                background-color: #fff;
+                padding: 20px;
+                border-radius: 5px;
+            }
+
+            .close-button {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                cursor: pointer;
+            }
+        </style>
+
+        <script>
+            function updateTasks() {
+
+                /**
+                 * --------------- 
+                 * PROGRESS BARS 
+                 * ---------------
+                 **/
+                let progressBars = document.querySelectorAll('.progressBar');
+                progressBars.forEach(function(progressBar) {
+
+                    const task_id = progressBar.id;
+                    Unicorn.call('webscrape.webscrape', 
+                        'get_task_progress_by_task_id', task_id);
+
+                    const task_progress = Unicorn.getReturnValue('webscrape.webscrape');
+                    console.log(`task_progress - ${task_id} : ${task_progress}`);
+                    if(task_progress) {
+
+                        progressBar.style.width = `${task_progress}%`;
+
+                        // Optionally, update progress text
+                        const progressText = document.getElementById(`progressText-${task_id}`);
+                        if (progressText) {
+                            progressText.textContent = `${task_progress}%`;
+                        }                        
+                    }
+
+                /**
+                 * --------------- 
+                 * OUTPUTS 
+                 * ---------------
+                 **/
+
+                });
+            }
+            setInterval(updateTasks, 20000);
+
+
+            function openOverlay(content) {
+                const overlay = document.createElement('div');
+                overlay.classList.add('overlay'); 
+                overlay.innerHTML = `
+                    <div class="overlay-content">
+                        <span class="close-button" onclick="closeOverlay()">×</span>
+                        ${content}
+                    </div>
+                `;
+                document.body.appendChild(overlay);
+            }
+
+            function closeOverlay() {
+                const overlay = document.querySelector('.overlay');
+                if (overlay) {
+                    overlay.remove();
+                }
+            }
+
+        </script>
+
+    <!-- /div -->
 </div>
