--- a/django_app/templates/_base.html
+++ b/django_app/templates/_base.html
@@ -8,31 +8,39 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Django Unicorn + Tailwind = ❤️</title>
+        <title>{% block title %}Django Unicorn + Tailwind = ❤️{% endblock title %}</title>
 
         {% tailwind_preload_css %}
         {% tailwind_css %}
 
         <link rel="stylesheet" href="{% static 'templates/main/css/main.css' %}">
 
-        
+
         <!-- Fontawesome -->
         <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'fontawesomefree/css/regular.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">    
-        
+        <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
+
 
         {% load unicorn %}
         <script defer src="https://unpkg.com/@alpinejs/morph@3.x.x/dist/cdn.min.js"></script>
         <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
         {% unicorn_scripts %}
 
-        <script type="text/javascript" src="{% static 'templates/main/js/main.js' %}"></script>     
+        <script type="text/javascript" src="{% static 'templates/main/js/main.js' %}"></script>
     </head>
 
     <body class="bg-slate-100 w-full">
-        <div class="container w-full">
+
+        <div style="margin: 5em auto; padding: 5em; color: darkred; border: 1px solid darkred; text-align: center; font-size: 1.5em;">
+            DISK SPACE IS FULL
+            <br/><small>Your app may not function properly...</small>
+            <br/><small style="font-size: 0.65em !important;">Layout may be flat, incorrect, or distorted, elements may be missing,<br/> pages, media, elements, modules may crash, dysfunction or be inaccessible...</small>
+        </div>
+
+
+        <div class="container w-full" style="display: none;">
             {% block content %}
             {% endblock content %}
         </div>
