--- a/webscraping/templates/webscraping/webscrape.html
+++ b/webscraping/templates/webscraping/webscrape.html
@@ -7,6 +7,8 @@
 {% load unicorn %}
 {% csrf_token %}
 
+{% block title %}⚙ Webscraping{% endblock title %}
+
 {% block content %}
 
     <div class="bg-slate-800 w-full top-0 py-4 px-4">
