[Task - See 'WEBSITE-SCRAPING-Truthfinder.com' mindmap](https://drive.google.com/file/d/16LXDHxf6q1Repj1E2KlCpvZRVnLClDjK/view?usp=drive_link) (['mount path'](google-drive://mayou.nkensa@gmail.com/GVfsSharedWithMe/0B39Sj9mqtvSyM2NlZjZjZWYtNGVjZC00NTU0LTkzMWUtNGIzZjVmNTgyMTc4/0B39Sj9mqtvSycEVjTV9pZllfUzQ/0B39Sj9mqtvSyTzdtakJ1RW41am8/1cVkUyxtFhjCWj-D5u--Q8AwOqpSfC51J/1Qm18Vv2T-N092weQNiCMIISKS7lga7hr/1I17iJ_UagHNNPgQTM8LeZbaQUQCU7kI_/1y4aqHqRC3lLIkkz6FYHNYOuv8TJRvsPy/1JDBULfFjCeXVbU98R0qMj_kbA4ZQCFZa/1Qnaumo16wPlw82PVMOApqMURsYqJFeKQ/1axsRJhxUnUr17IQUkIzy70XD_cN4QFE7) - Webscraper demo implemented | Refactoring in place for config controlled process | TESTED, ADJUSTED, OK... | First full webscrape and webscrapes batch implemented and tested, to be reviewed... | Corrections + Adding firstName+lastName inputs sequenced + assertion for process interruption (SAFEKEEPING, not validated) | Adjustments, little cleanup... | Taskhandling implementation :: (1. cache, 2. create task handler, 3. create webscrape method) done → Next: 4. create api methods, 5. test, validate...| 12th Done → Deploying... | Demo / unfinished prototype version ready for deployment on Pyany :: PROJECT PUT ON HOLD for organizing the continuation... | Version 0.5 completed :: First prototype... | Pushing to zip and deploy on Pyany... | Connected with Railway > Deploying... : NOT OK | Taskhandling / Thread max and termination updated > Deployment attempt... | Local, testing new Taskhandler threading: OK, running, to be checked...

--- a/webscraping/templates/unicorn/webscrape/manage.html
+++ b/webscraping/templates/unicorn/webscrape/manage.html
@@ -67,7 +67,7 @@
             let $firstName = document.querySelector('#firstName');
             const date_time_str = getCurrentDateTimeStr();
 
-            let title = $title.value;
+            let title = $title ? $title.value : "";
             let lastName = $lastName.value;
             if(title){
                 title = `${title} | ${date_time_str}`
@@ -81,7 +81,9 @@
                 }
             }
 
-            $title.value = title;
+            if($title){
+                $title.value = title;
+            }
             const module_path = document.getElementById('module_path').value;
             Unicorn.call(module_path, 'setTitle', title);
         };
@@ -97,7 +99,7 @@
             });
         };
     </script>
-    <input type="hidden" id="module_path" value="webscraping.manage" /> 
+    <input type="hidden" id="module_path" value="webscrape.manage" /> 
 
     <input unicorn:model.defer="website_url"      type="text"   id="website_url"   placeholder="website url, ex: https://www.truthfinder.com/people-search/" value="{{webscrape.website_url}}"    
     class="form-control rounded border-green-700 shadow-lg text-green-900 tracking-wider w-4/5" /> *
