--- a/webscraping/templates/unicorn/webscrape/manage_custom.html
+++ b/webscraping/templates/unicorn/webscrape/manage_custom.html
@@ -104,7 +104,7 @@
             });
         });
     </script>
-    <input type="hidden" id="module_path" value="webscraping.manage_custom" /> 
+    <input type="hidden" id="module_path" value="webscrape.manage_custom" /> 
 
 
     <select unicorn:model.defer="website_url"
