--- a/webscraping/templates/unicorn/webscrape/manage_people.html
+++ b/webscraping/templates/unicorn/webscrape/manage_people.html
@@ -9,7 +9,7 @@
         {% define '' as select_state %}
     {% endif %}
 
-    <input type="hidden" id="module_path" value="webscraping.manage_people" /> 
+    <input type="hidden" id="module_path" value="webscrape.manage_people" /> 
 
     <input unicorn:model.defer="website_url"      type="text"   id="website_url"   placeholder="website url, ex: https://www.truthfinder.com/people-search/" value="{{webscrape.website_url}}"    
     class="form-control rounded border-green-700 shadow-lg text-green-900 tracking-wider w-4/5" /> *
